# spec_dec_quant_hw

./: .gitignore  local_agent_briefing.md  spec_dec+quantization_homework.ipynb
.claude/: settings.local.json
envs/compressor/: pyproject.toml
envs/speculators/: pyproject.toml
envs/vllm/: pyproject.toml
outputs/: disk_space.txt  env_compressor_freeze.txt  env_speculators_freeze.txt  latest_eagle3_checkpoint.txt  machine_fingerprint.txt  nvidia_smi.txt  python_versions.txt
outputs/benchmarks/: fp8_bench_20260702_093404.txt  fp8_bench_20260702_093820.txt  fp8_speculative_bench_20260702_094238.txt  fp8_speculative_bench_20260702_102557.txt  manual_baseline_bench_20260702_083751.txt  manual_baseline_bench_20260702_084537.txt  rubric_score_check.txt  speculative_bench_20260702_085548.txt  speculative_bench_20260702_090915.txt  task4_final_summary.txt
outputs/eagle3_qwen3_8b_sharegpt_full_20260701_105957/: state.json
outputs/eagle3_qwen3_8b_sharegpt_medium_20260701_105724/: dataset_info.json  state.json
outputs/late_submission_1750/: README.txt  late_submission_success_note.md  rubric_score_check_PASS.txt
outputs/submission_bundle/: fp8_speculative_nspec1_bench_latest.txt  (+3 more)
scripts/: bench_vllm.sh  bench_vllm.sh.bak_20260702_091433  collect_submission_outputs.sh  deploy_gpu.sh  nebius_provision.sh  prepare_eagle_data.sh  quantize_fp8.sh  serve_vllm.sh  serve_vllm.sh.bak_20260702_101427  setup_envs.sh  setup_gpu.sh  train_eagle3.sh  upload_artifacts.sh  upload_artifacts.sh.bak_20260701_120628  upload_artifacts.sh.bak_20260701_122148
wandb/: latest-run
(+42 files in other folders)
